# Presence_Judo

./: .gitignore  README.md  pyproject.toml  structure.txt
app/: Dockerfile  app.py
app/static/: appel.css  login.css  menu.css  style.css
app/templates/: appel_encours.html  appel_menu.html  base.html  config_cours.html  correction_appel.html  correction_cours.html  index.html  login.html  menu_correction_appel.html  nav.html  profil_perso.html  register.html  visu_generale.html  visu_grp.html
judo_app/: Dockerfile  LICENSE.txt  entrypoint.sh  run.py
judo_app/app/: __init__.py  config.py  extensions.py  models.py
judo_app/app/routes/: __init__.py  api_routes.py  auth_routes.py  main_routes.py  stats_routes.py
judo_app/app/services/: stats_service.py
judo_app/app/static/: appel.css  correction_appel.css  login.css  menu.css  style.css
judo_app/app/templates/: appel_encours.html  appel_menu.html  base.html  config_cours.html  correction_appel.html  correction_cours.html  index.html  login.html  menu_correction_appel.html  nav.html  profil_perso.html  register.html  visu_generale.html
script/: create-db-template.sql
